# accelerator-ci

./: .containerignore  .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  centos-stream.repo  cluster-config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
accelerator_ci/: __init__.py
accelerator_ci/cluster_provision/: common.py  config.py  delete.py  deploy.py  kcli_preflight.py  main.py  must_gather.py  openshift.py  params.py  remote.py  snapshot.py  status.py  vm.py
accelerator_ci/operators/: __init__.py  cluster_health.py  constants.py  errors.py  install.py  orchestrator.py  prerequisites.py
accelerator_ci/shared/: __init__.py  oc_runner.py  progress.py  ssh.py  version_utils.py
accelerator_ci/testing/: __init__.py  conftest.py  helpers.py  runner.py
accelerator_ci/vendors/: __init__.py  base.py
accelerator_ci/workflows/common/: templates.py  utils.py
examples/example_vendor/: README.md  config.yaml  profile.py
examples/example_vendor/tests/: test_operators.py
scripts/: must-gather.sh
tests/: test_cli.py  test_cluster_health.py  test_common.py  test_config.py  test_conftest_fixtures.py  test_delete.py  test_deploy.py  test_e2e.py  test_helpers.py  test_install.py  test_kcli_preflight.py  test_must_gather.py  test_oc_runner.py  test_openshift.py  test_orchestrator.py  test_params.py  test_prerequisites.py  test_progress.py  test_remote.py  test_runner.py  test_snapshot.py  test_ssh.py  test_status.py  test_vendor_base.py  test_version_utils.py  test_vm.py
