[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerator-ci"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "pytest>=8.0",
    "kubernetes>=28.0.0",
    "requests>=2.31.0",
    "semver>=3.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
accelerator-ci = "accelerator_ci.cluster_provision.main:cli"
